--- a/public/index.html
+++ b/public/index.html
@@ -32,21 +32,24 @@
     
     </head>
     <body>
-<!--
-    <nav class="navbar" role="navigation">
-        <div class="navcontainerb container">
-            <div class="navbar-header">
-                <a href="#/"><img src="http://image005.flaticon.com/1/svg/86/86237.svg" width="50px"></a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li ng-class="{active: activetab=='/'}"><a href="#/">Home</a></li>
-                <li ng-class="{active: activetab=='/about'}"><a href="#/about">About</a></li>
-            </ul>
-        </div>
-    </nav>
--->
-    <div class="container">
-        <ng-view></ng-view>
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header"> 
+                <div class="collapse navbar-collapse">
+                <ul class="nav nav-pills nav-stacked">
+                   <li><a href="#/"><img src="img/logo.png"></a></li>
+                    <li><a href="#/">Home</a></li>
+                    <li><a href="#circuits">Circuit</a></li>
+                    <li><a href="#walkers">Amis</a></li>
+                    <li><a href="#hitsory">Historique</a></li>
+                    <li><a href="#/about">About</a></li>
+                </ul>
+                </div>
+                </div>  
+            </div>         
+        </nav>
+      <div class="bodycontainer">
+       <h1>Sunwalk</h1>
     </div>
 </body>
 </html>
