--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/png" href="" />
-    <title>Sample</title>
+    <title>SunWalk</title>
     
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -38,18 +38,15 @@
                 <div class="collapse navbar-collapse">
                 <ul class="nav nav-pills nav-stacked">
                    <li><a href="#/"><img src="img/logo.png"></a></li>
-                    <li><a href="#/">Home</a></li>
-                    <li><a href="#circuits">Circuit</a></li>
-                    <li><a href="#walkers">Amis</a></li>
-                    <li><a href="#hitsory">Historique</a></li>
-                    <li><a href="#/about">About</a></li>
+                    <li ng-class="{active: activetab=='/'}"><a href="#/">Circuit</a></li>
+                    <li ng-class="{active: activetab=='/walkers'}"><a href="#/walkers">Amis</a></li>
+                    <li ng-class="{active: activetab=='/history'}"><a href="#/history">Historique</a></li>
                 </ul>
                 </div>
                 </div>  
             </div>         
         </nav>
-      <div class="bodycontainer">
-       <h1>Sunwalk</h1>
-    </div>
+      <div class="bodycontainer"> </div>
+      <ng-view></ng-view>
 </body>
 </html>
