--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,8 @@
                 </div>  
             </div>         
         </nav>
-      <div class="bodycontainer"> </div>
+      <div class="bodycontainer"> 
       <ng-view></ng-view>
+      </div>
 </body>
 </html>
