--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <script src="js/libs/angular-route.min.js"></script>
     
     <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     
     <script src="js/controllers/circuitController.js"></script>
     <script src="js/controllers/walkersController.js"></script>
@@ -33,7 +33,7 @@
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
+            <div class="nav-content">
                 <div class="navbar-header"> 
                 <div class="collapse navbar-collapse">
                 <ul class="nav nav-pills nav-stacked">
