begin od page history

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <script src="js/controllers/walkersController.js"></script>
     <script src="js/controllers/historyController.js"></script>
     <script src="js/controllers/kmlController.js"></script>
+     <script src="js/controllers/weatherController.js"></script>
     
     <script src="js/services/circuitService.js"></script>
     <script src="js/services/walkersService.js"></script>
@@ -46,6 +47,7 @@
                     <li ng-class="{active: activetab=='/'}"><a href="#/">Circuit</a></li>
                     <li ng-class="{active: activetab=='/walkers'}"><a href="#/walkers">Amis</a></li>
                     <li ng-class="{active: activetab=='/history'}"><a href="#/history">Historique</a></li>
+                    <li ng-class="{active: activetab=='/weather'}"><a href="#/weather">Météo</a></li>
                 </ul>
                 </div>
                 </div>  
