--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- FONTS -->
+    <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 
     <!-- AngularJS -->
     <script src="js/libs/angular.min.js"></script>
@@ -19,45 +21,80 @@
 
     <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-
     <script src="js/libs/ng-map.min.js"></script>
     <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
 
-    <script src="js/controllers/circuitController.js"></script>
-    <script src="js/controllers/walkersController.js"></script>
-    <script src="js/controllers/historyController.js"></script>
-    <script src="js/controllers/kmlController.js"></script>
-    <script src="js/controllers/weatherController.js"></script>
- 
-    <script src="js/services/circuitService.js"></script>
-    <script src="js/services/walkersService.js"></script>
-    <script src="js/services/historyService.js"></script>
+    <script src=" js/controllers/circuitController.js "></script>
+    <script src="js/controllers/walkersController.js "></script>
+    <script src="js/controllers/historyController.js "></script>
+    <script src="js/controllers/kmlController.js "></script>
+    <script src="js/controllers/weatherController.js "></script>
+    <script src="js/services/circuitService.js "></script>
+    <script src="js/services/walkersService.js "></script>
+    <script src="js/services/historyService.js "></script>
 
     <script src="js/app.js"></script>
-    
-    </head>
-    <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="nav-content">
-                <div class="navbar-header"> 
-                <div class="collapse navbar-collapse">
-                <ul class="nav nav-pills nav-stacked">
-                   <li><a href="#/"><img src="img/logo.png"></a></li>
-                    <li ng-class="{active: activetab=='/'}"><a href="#/">Circuit</a></li>
-                    <li ng-class="{active: activetab=='/walkers'}"><a href="#/walkers">Amis</a></li>
-                    <li ng-class="{active: activetab=='/history'}"><a href="#/history">Historique</a></li>
-                    <li ng-class="{active: activetab=='/weather'}"><a href="#/weather">Météo</a></li>
-                </ul>
+
+</head>
+
+<body>
+    <!-- Wrap all page content here -->
+    <div id="wrap">
+
+        <!-- Fixed navbar -->
+        <div class="navbar navbar-default back" data-spy="affix" data-offset-top="60" data-offset-bottom="70" id="navbar" style="background-color:none;">
+            <div class="container navigationSlide">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!--<a class="navbar-brand" href="#">Sunwalk</a>-->
                 </div>
-                </div>  
-            </div>         
-        </nav>
-      <div class="bodycontainer"> 
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li ng-class="{active: activetab=='/'}">
+                            <!--<a href="#/weather">Home</a>--></li>
+                        <li class="radi" ng-class="{active: activetab=='/circuits'}"><a href="#/circuits">Circuits</a></li>
+                        <li class="radi" ng-class="{active: activetab=='/walkers'}"><a href="#/walkers">Friends</a></li>
+                        <li class="radi" ng-class="{active: activetab=='/history'}"><a href="#/history">Events</a></li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </div>
 
-      <ng-view></ng-view>
 
-      </div>
+
+
+
+    <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="nav-content">
+            <div class="navbar-header">
+                <div class="collapse navbar-collapse">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li>
+                            <a href="#/" style=""><img src="img/logo.png"></a>
+                        </li>
+                        <li ng-class="{active: activetab=='/'}"><a href="#/">Circuits</a></li>
+                        <li ng-class="{active: activetab=='/walkers'}"><a href="#/walkers">Amis</a></li>
+                        <li ng-class="{active: activetab=='/history'}"><a href="#/history">Evénements</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav> -->
+    <div class="bodycontainer" data-spy="affix" data-offset-top="60" data-offset-bottom="70">
+
+        <ng-view></ng-view>
+
+
+
+
+    </div>
+
 
 </body>
 
